📏  offset footer and social icons to prevent overflow with link preview

--- a/src/styl/organisms/footer.styl
+++ b/src/styl/organisms/footer.styl
@@ -2,7 +2,7 @@
   text-align center
   margin-left: 17vw;
   p
-    margin-bottom 1rem
+    margin-bottom 2rem
     a
       color lightseagreen
       &:hover
