--- a/src/styl/organisms/sidebar.styl
+++ b/src/styl/organisms/sidebar.styl
@@ -16,7 +16,7 @@ aside.vertical-sidebar
   .vertical-menu
     width 100%
   .vertical-social
-    padding-bottom 1rem
+    padding-bottom 2rem
     display flex
     .icon
       padding 0
